tests/testcases/06-generic_enum.stderr
error: generic enum not supported.
 --> $DIR/06-generic_enum.rs:4:11
  |
4 | enum Query<T> {
  |           ^^^
